Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109679

Qt Quick cannot keep up with high refresh rate monitors

XMLWordPrintable

    • 08b71d861 (dev)

      On 240Hz monitor it doesn't seem to reach 200 FPS with animations. However, if animator is used instead, it has no problem reaching even several thousand FPS when vsync is off.

      In renderloop category all timings are 0, except with polishAndSync which is always called at some short interval:

      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][gui thread] polishAndSync: start, elapsed since last call: 5 ms
      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][render thread 0x55cea6ba6790] syncAndRender: start, elapsed since last call: 5 ms
      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][gui thread] Frame prepared, polish=0 ms, lock=0 ms, blockedForSync=0 ms, animations=0 ms
      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][render thread 0x55cea6ba6790] syncAndRender: frame rendered in 0ms, sync=0, render=0, swap=0
      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][gui thread] polishAndSync: start, elapsed since last call: 7 ms
      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][render thread 0x55cea6ba6790] syncAndRender: start, elapsed since last call: 7 ms
      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][gui thread] Frame prepared, polish=0 ms, lock=0 ms, blockedForSync=0 ms, animations=0 ms
      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][render thread 0x55cea6ba6790] syncAndRender: frame rendered in 0ms, sync=0, render=0, swap=0
      qt.scenegraph.time.renderloop: [window 0x55cea66ebc50][gui thread] polishAndSync: start, elapsed since last call: 5 ms
      

        1. image-2023-02-17-19-25-38-888.png
          21 kB
          Felix van de Donk
        2. qtbug109679.tar.gz
          2 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes